<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="5dp"
    android:background="@color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/maintabs_d_group_title"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintabs_d_group_p1"
            android:lineSpacingExtra="10dp"
            android:lineHeight="5dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintabs_d_group_p2"
            android:lineSpacingExtra="10dp"
            android:lineHeight="5dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/safergo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/maintabs_d_group_p3"
            android:lineSpacingExtra="10dp"
            android:lineHeight="5dp"
            android:padding="18dp"
            android:textSize="12sp"/>

    </LinearLayout>
</ScrollView>