<?xml version="1.0" encoding="UTF-8"?>

    <TabHost android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <FrameLayout android:id="@android:id/tabcontent" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <TabWidget android:id="@android:id/tabs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0" />
            <RadioGroup
                android:gravity="center_vertical" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/main_radio" android:background="@color/windowBackground"
                android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton  android:id="@id/radio_button0" android:layout_marginTop="0.0dip" android:text="@string/main_home" android:drawableTop="@drawable/icon_1_n" style="@style/main_tab_bottom" android:background="@drawable/drawable_click_bg_bottom" android:clickable="true" />
                <RadioButton  android:id="@id/radio_button1" android:layout_marginTop="0.0dip" android:text="@string/main_news" android:drawableTop="@drawable/icon_2_n" style="@style/main_tab_bottom" android:background="@drawable/drawable_click_bg_bottom" android:clickable="true"/>
                <RadioButton  android:id="@id/radio_button2" android:layout_marginTop="0.0dip" android:text="@string/main_manage_date" android:drawableTop="@drawable/icon_3_n" style="@style/main_tab_bottom" android:background="@drawable/drawable_click_bg_bottom" android:clickable="true"/>
                <RadioButton  android:id="@id/radio_button3" android:layout_marginTop="0.0dip" android:text="@string/main_friends" android:drawableTop="@drawable/icon_4_n" style="@style/main_tab_bottom" android:background="@drawable/drawable_click_bg_bottom" android:clickable="true"/>
            </RadioGroup>
        </LinearLayout>

    </TabHost>

