<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Main_C_ListItem1"
android:orientation="vertical"
android:padding="10dp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="60dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="出行安全——女生篇"
            android:textSize="28dp"
            android:textColor="@color/textColor"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/safergo"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="4dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"

                    android:text="关注"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:background="@drawable/style_register_radius_drawable_bg"/>
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2018-09-25 00:00:00"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/maintabs_c_pic1"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/p1"
            android:lineHeight="5dp"
            android:drawablePadding="20dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/p2"
            android:lineHeight="5dp"
            android:drawablePadding="20dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/p3"
            android:lineHeight="5dp"
            android:drawablePadding="20dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/p4"
            android:lineHeight="5dp"
            android:drawablePadding="20dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/p5"
            android:lineHeight="5dp"
            android:drawablePadding="20dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/p6"
            android:lineHeight="5dp"
            android:drawablePadding="20dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/p7"
            android:lineHeight="5dp"
            android:drawablePadding="20dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/p8"
            android:lineHeight="5dp"
            android:drawablePadding="20dp"
            android:padding="18dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/p9"
            android:lineHeight="5dp"
            android:drawablePadding="20dp"
            android:padding="18dp"
            android:textSize="16sp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/maintabs_c_pic4"
            android:padding="10dp"/>




    </LinearLayout>
</ScrollView>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">
    <!--分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bdbdbd"/>

    <LinearLayout
        android:id="@+id/help_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/windowBackground"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/help_bottom_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/help_like"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="#03a9f4"
                android:text="喜欢"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/help_bottom_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/help_collect"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="#03a9f4"
                android:text="收藏"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/help_bottom_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/help_message"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="#03a9f4"
                android:text="评论"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/help_bottom_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/help_share"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#03a9f4"
                android:textSize="10sp"
                android:text="分享"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

</RelativeLayout>
